--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
-show_downloads: true
+title: Investigation in Memory
+description: A deep analysis of a Volatile memory capture file and an investigation of one or more cyber attacks
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
